welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: not found: value T
	for (i <- 0 to T.lenght - 1) {
                       ^